# sentinelai

./: .gitignore  README.md  pyproject.toml  sentinelai.spec
scripts/: build_mac.sh  build_windows.ps1  installer.iss
shell/: SentinelAI.psm1  install_hook.ps1
src/sentinelai/: __main__.py  cli.py
src/sentinelai/config/: settings.py
src/sentinelai/config/rules/: base.yaml  obfuscation.yaml  powershell.yaml  unix.yaml
src/sentinelai/core/: analyzer.py  llm_client.py  models.py  platform_utils.py  rule_engine.py
src/sentinelai/monitors/: clipboard.py
src/sentinelai/storage/: audit_log.py  db.py
src/sentinelai/ui/: alert_dialog.py  dashboard.py  tray.py
tests/fixtures/: benign_commands.txt  malicious_commands.txt
tests/unit/: test_audit_log.py  test_cli.py  test_clipboard_heuristic.py  test_rule_engine.py
