[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelai"
version = "0.1.0"
description = "AI-powered endpoint safety assistant that intercepts dangerous terminal commands"
requires-python = ">=3.11"  # tested on 3.14 (Homebrew)
dependencies = [
    "ollama>=0.3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyQt6>=6.6",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
package = [
    "pyinstaller>=6.0",
]

[project.scripts]
sentinelai = "sentinelai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
